--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin page is her e</title>
 </head>
+
 <body>
     <h1>ameen ali is here </h1>
+    <h1>admin is here ameen ali </h1>
 </body>
+
 </html>
